(add) router for other pages

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -15,6 +15,9 @@
   <script src="./bower_components/underscore/underscore.js"></script>
   <script src="./bower_components/backbone/backbone.js"></script>
 
+  <!-- Load Router -->
+  <script src="./Router.js"></script>
+
   <!-- Load models -->
   <script src="./models/AppModel.js"></script>
   <script src="./models/ChartModel.js"></script>
@@ -29,13 +32,13 @@
   <script src="./views/ChartView.js"></script>
   <script src="./views/FooterView.js"></script>
   <script src="./views/HeaderView.js"></script>
+  <script src="./views/NewKeywordView.js"></script>
   <script src="./views/QueriesView.js"></script>
   <script src="./views/QueryView.js"></script>
   <script src="./views/StoryMenuItemView.js"></script>
   <script src="./views/StoryMenuView.js"></script>
   <script src="./views/SubBarView.js"></script>
   <script src="./views/TopNavView.js"></script>
-  <script src="./views/NewKeywordView.js"></script>
 
   <link rel="stylesheet" type="text/css" href="./bower_components/jqueryui/themes/smoothness/jquery-ui.css">
   <script src="./bower_components/jqueryui/jquery-ui.js"></script>
