(add) favicon and folder for the favicon.  Got basic router functional.

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Vollkorn|Roboto:400,100,700,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
-<body>
-<!-- <div class="container"></div> -->
   <!-- Load library utils -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -35,6 +33,7 @@
   <script src="./views/NewKeywordView.js"></script>
   <script src="./views/QueriesView.js"></script>
   <script src="./views/QueryView.js"></script>
+  <script src="./views/SandboxView.js"></script>
   <script src="./views/StoryMenuItemView.js"></script>
   <script src="./views/StoryMenuView.js"></script>
   <script src="./views/SubBarView.js"></script>
@@ -58,6 +57,9 @@
   </script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+</head>
+<body>
+<!-- <div class="container"></div> -->
 
 </body>
 </html>
