(setup) keyword models & collections

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -16,13 +16,16 @@
   <!-- Load Router -->
   <script src="./Router.js"></script>
 
+
   <!-- Load models -->
   <script src="./models/AppModel.js"></script>
   <script src="./models/ChartModel.js"></script>
+  <script src="./models/KeywordModel.js"></script>
   <script src="./models/QueryModel.js"></script>
   <script src="./models/StoryModel.js"></script>
 
-  <!-- Load collections -->
+  <!-- Load Collections -->
+  <script src="./collections/Keywords.js"></script>
   <script src="./collections/Queries.js"></script>
 
   <!-- Load views -->
