(add) keyword search and display for sandboxview

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -37,6 +37,7 @@
   <script src="./views/QueriesView.js"></script>
   <script src="./views/QueryView.js"></script>
   <script src="./views/SandboxView.js"></script>
+  <script src="./views/SandboxSubBarView.js"></script>
   <script src="./views/StoryMenuItemView.js"></script>
   <script src="./views/StoryMenuView.js"></script>
   <script src="./views/SubBarView.js"></script>
@@ -56,6 +57,7 @@
 
       // Render the view on the screen
       $('body').append(appView.render())
+      console.log("app", app);
     });
   </script>
 
