(add) highcharts.js scaffolding

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Sentimental</title>
+  <!-- HighCharts experiment -->
+  <!-- <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="http://code.highcharts.com/modules/exporting.js"></script>
+ -->
+
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Vollkorn|Roboto:400,100,700,300' rel='stylesheet' type='text/css'>
