--- a/public/client/index.html
+++ b/public/client/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Vollkorn|Roboto:400,100,700,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+  
   <!-- Load library utils -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -54,7 +55,7 @@
     $(function(){
 
       // Set up model objects
-      var chart = new ChartModel({keywords: ['Bill Clinton'], sources: ['New York Times']});
+      var chart = new ChartModel({keywords: ['bill Clinton'], sources: ['new york times']});
       var app = new AppModel({chart: chart});
 
       // Set up view for whole app
