(updated) QueryModel to work

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -55,7 +55,7 @@
     $(function(){
 
       // Set up model objects
-      var chart = new ChartModel({keywords: ['bill Clinton'], sources: ['new york times']});
+      // var chart = new ChartModel({keywords: ['Bill Clinton'], sources: ['new york times']});
       var app = new AppModel({chart: chart});
 
       // Set up view for whole app
